--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="edit_txt">Login</string>
+    
+    <string name="format_short">Short</string>
+    <string name="format_long">Long</string>
+    <string name="get_time">Get time</string>
+    <string name="observer">Observer</string>
 
 </resources>
