--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,16 +2,18 @@
 <resources>
 
     <string name="app_name">TMDB</string>
+    <color name="backColor">#F8F8FF</color>
+
     <string name="title_login_activity">Login Screen</string>
+    <string name="title_vk_login_activity">Vk Login Screen</string>
     <string name="title_main_activity">Main Screen</string>
     <string name="title_sample_activity">Sample Screen</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="title_fragment_activity">Fragment Screen</string>
+
     <string name="action_settings">Settings</string>
     <string name="edit_txt">Login</string>
-    
-    <string name="format_short">Short</string>
-    <string name="format_long">Long</string>
-    <string name="get_time">Get time</string>
-    <string name="observer">Observer</string>
+
+    <string name="frag1_text">Fragment 1</string>
+    <string name="frag2_text">Fragment 2</string>
 
 </resources>
