--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="title_main_activity">Main Screen</string>
     <string name="title_sample_activity">Sample Screen</string>
     <string name="title_fragment_activity">Fragment Screen</string>
+    <string name="title_collection_activity">Collection Screen</string>
 
     <string name="action_settings">Settings</string>
     <string name="edit_txt">Login</string>
