--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,9 @@
     <string name="title_login_activity">Login Screen</string>
     <string name="title_vk_login_activity">Vk Login Screen</string>
     <string name="title_main_activity">Main Screen</string>
+    <string name="title_details_activity">Details Screen</string>
     <string name="title_sample_activity">Sample Screen</string>
     <string name="title_fragment_activity">Fragment Screen</string>
-    <string name="title_collection_activity">Collection Screen</string>
 
     <string name="action_settings">Settings</string>
     <string name="edit_txt">Login</string>
