--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,16 @@
     <string name="title_vk_login_activity">Vk Login Screen</string>
     <string name="title_main_activity">Main Screen</string>
     <string name="title_details_activity">Details Screen</string>
-
+    <string name="title_search_activity">Search Screen</string>
 
     <string name="action_settings">Settings</string>
+
+
+    <string name="item1">Item1</string>
+    <string name="item2">Item2</string>
+    <string name="item3">Item3</string>
+    <string name="item4">Item4</string>
+
     <string name="edit_txt">Login</string>
 
 
