--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,8 @@
     <string name="item3">Item3</string>
     <string name="item4">Item4</string>
 
+    <string name="search_hint">Search</string>
+
     <string name="edit_txt">Login</string>
 
 
