--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,10 +6,10 @@
     <string name="title_login_activity">Login Screen</string>
     <string name="title_vk_login_activity">Vk Login Screen</string>
     <string name="title_main_activity">Main Screen</string>
-    <string name="title_details_activity">Details Screen</string>
     <string name="title_search_activity">Search Screen</string>
+    <string name="title_fragment_with_activity">Fragment Screen</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_internet">Internet</string>
 
     <string name="empty_message">Data is empty.</string>
     <string name="error_message">Data is empty.</string>
@@ -17,10 +17,8 @@
     <string name="poster_content_description">Poster</string>
     <string name="backdrop_content_description">Backdrop</string>
 
-    <string name="item1">Item1</string>
-    <string name="item2">Item2</string>
-    <string name="item3">Item3</string>
-    <string name="item4">Item4</string>
+    <string name="button_log_noauth">No Auth</string>
+    <string name="button_log_vkauth">Vk Auth</string>
 
     <string name="search_hint">Search</string>
 
