--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,7 @@
 
     <string name="action_internet">Internet</string>
 
-    <string name="empty_message">Data is empty.</string>
+    <string name="empty_message">Nothing found.</string>
     <string name="error_message">Data is wrong.</string>
     <string name="app_not_available">Sorry, there\'s no web browser available.</string>
 
