fix unsupported other language in search

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="tagline">Tagline\n</string>
     <string name="serif">serif</string>
     <string name="no_poster">no poster</string>
+    <string name="utf_8">UTF-8</string>
 
 
 </resources>
