--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,8 +36,10 @@
     <string name="ok_button">OK</string>
     <string name="cancel_button">Cancel</string>
     <string name="unsup_encod_exept">UnsupportedEncodingException\n</string>
-    <string name="some_exept">Some exeption was happening\n</string>
+    <string name="some_exeption">Some exeption was happening\n</string>
     <string name="json_exept">JSON exeption</string>
     <string name="button_alpha">Alpha</string>
-
+    <string name="backdrop_description">Backdrop</string>
+    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
+    <string name="trailer_button">Trailer</string>
 </resources>
