--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -26,4 +26,5 @@
     <string name="backdrop_description">Backdrop</string>
     <string name="error_player">Произошла ошибка с вызовом YouTubePlayer (%1$s)</string>
     <string name="language_setting">Язык</string>
+    <string name="min">" мин"</string>
 </resources>
