--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="english">En</string>
     <string name="russian">Ru</string>
     <string name="alpha">Alpha</string>
+    <string name="min">" min"</string>
 </resources>
