add inner star rating

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,6 @@
     <string name="russian">Ru</string>
     <string name="alpha">Alpha</string>
     <string name="min">" min"</string>
+    <string name="rating">"Ratings: "</string>
+    <string name="from">"/10 from "</string>
 </resources>
