--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -27,4 +27,6 @@
     <string name="error_player">Произошла ошибка с вызовом YouTubePlayer (%1$s)</string>
     <string name="language_setting">Язык</string>
     <string name="min">" мин"</string>
+    <string name="rating">"Рейтинг: "</string>
+    <string name="from">"/10 по "</string>
 </resources>
