--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,4 +50,5 @@
     <string name="min">" min"</string>
     <string name="rating">"Ratings: "</string>
     <string name="from">"/10 from "</string>
+    <string name="post">Post</string>
 </resources>
