--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="rating">"Ratings: "</string>
     <string name="from">"/10 from "</string>
     <string name="post">Post</string>
+    <string name="content_description_profile">content_description_profile</string>
 </resources>
