few fix detail movie screen, fix out of memory for Image loader, refactoring ApiTMDB

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -26,7 +26,7 @@
     <string name="backdrop_description">Backdrop</string>
     <string name="error_player">Произошла ошибка с вызовом YouTubePlayer (%1$s)</string>
     <string name="language_setting">Язык</string>
-    <string name="min">"мин"</string>
+    <string name="min">"%1$s мин"</string>
     <string name="rating">"Рейтинг: "</string>
     <string name="from">"/10 по "</string>
 </resources>
